# fat-music-shuffler

./: .gitignore  Cargo.toml  README.md  flake.nix
f32ms-cli/: Cargo.toml
f32ms-cli/src/: cli.rs  commands.rs  lsblk.rs  text.rs
f32ms-cli/src/commands/: clean.rs  fix.rs
f32ms-common/: Cargo.toml
f32ms-gui/: Cargo.toml  build.rs
f32ms-gui/src/: cxxqt_object.rs
fatfs/: COMMIT
fatfs/src/: dir.rs  dir_entry.rs  fs.rs
src/: cli.rs  commands.rs  lsblk.rs  main.rs  text.rs  util.rs
src/commands/: clean.rs  fix.rs  format.rs  import.rs  info.rs  process.rs  shuffle.rs
