[workspace]
resolver = "3"
members = ["f32ms-cli", "f32ms-common", "f32ms-gui"]

[workspace.dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.51", features = [ "derive" ] }
fatfs = { path = "./fatfs" }
fscommon = "0.1.1"
humantime = "2.3.0"
mp3-duration = "0.1.10"
nix = { version = "0.30.1", features = [ "fs" ] }
rand = "0.9.2"
serde = { version = "1.0.228", features = [ "derive" ] }
serde_json = "1.0.145"
