[package]
name = "f32ms-gui"
version = "1.0.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
clap.workspace = true
fatfs.workspace = true
fscommon.workspace = true
humantime.workspace = true
mp3-duration.workspace = true
nix.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true

cxx = "1.0.95"
cxx-qt = "0.7"
cxx-qt-lib = { version = "0.7", features = ["qt_full"] }

[build-dependencies]
cxx-qt-build = { version = "0.7", features = ["link_qt_object_files"] }
